# SC_Labs

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_app.py  setup.py
.streamlit/: config.toml
app/: app.py  app_utils.py  auth.py  components.py  navigation.py  styles.css
app/pages/: __init__.py  data_settings.py  forecasting.py  inventory.py  landing.py  routing.py
auxiliar/: __init__.py  auxiliar.py
auxiliar/utils/: __init__.py
data/: README.md  sample_sales_data.csv
docs/: auxiliar.md  configuration.md  deploy.md  forecaster.md  optimizer.md  router.md
forecaster/: __init__.py  forecaster.py
forecaster/utils/: __init__.py
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_16/: metrics.csv
lightning_logs/version_17/: metrics.csv
notebooks/: 01_data_generation.ipynb  02_forecasting.ipynb  03_inventory_optimization.ipynb  04_delivery_routing.ipynb
optimizer/: __init__.py  optimizer.py
output/: .gitkeep  02_forecasts.csv  03_inventory_plan.csv  04_deliveries.csv  04_routes.csv
router/: router.py
src/: add_user.py  clean_cache.py  cleanup.py  create_sample_data.py  main.py  setup.py  setup_auth.py
tests/: README.md  __init__.py  test_auxiliar.py  test_forecaster.py  test_integration.py  test_optimizer.py  test_router.py
utils/: README.md  config.py  data_validator.py  logger.py  output_manager.py
(+151 files in other folders)
