[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-labs"
version = "0.1.0"
description = "Supply Chain Optimization with Forecasting, Inventory Management, and Routing"
readme = "README.md"
requires-python = ">=3.8"
